--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
   "homepage": "https://github.com/naomimariuta/SlimMom#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.1"
+    "mongoose": "^8.10.1",
+    "swagger-ui-express": "^5.0.1"
   }
 }
