--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
